# agent-eval-arena

./: .gitignore  README.md
config/: cc.md  hermes.md  openclaw.md
reports/: architecture-diff-analysis.md  comparison-report.md  comprehensive-report.md  self-evolution-results.md
results/cc/: metrics.json
results/cc/cat1/bmk-project/: pyproject.toml
results/cc/cat1/bmk-project/src/bmk/: __init__.py  cli.py  db.py  io.py  models.py  search.py
results/cc/cat1/bmk-project/tests/: test_bmk.py
results/cc/cat2/task-2a/: form-data.json
results/cc/cat2/task-2b/: hn-stories.json
results/cc/cat2/task-2c/: repo-detail.json  trending-daily.json  trending-weekly.json
results/hermes/: metrics.json
results/hermes/cat1/bmk-project/: README.md  pyproject.toml
results/hermes/cat1/bmk-project/src/bmk/: cli.py  db.py  io.py  models.py  search.py
results/hermes/cat1/bmk-project/tests/: test_bmk.py
results/hermes/self-evolution/: report.md
results/hermes/self-evolution-v2/: analysis-report.md  detailed-report.md  report.md
results/openclaw/: metrics.json
results/openclaw/cat1/bmk-project/: README.md  pyproject.toml
results/openclaw/cat1/bmk-project/src/bmk/: __init__.py  cli.py  db.py  io.py  models.py  search.py
results/openclaw/cat1/bmk-project/tests/: test_bmk.py
scoring/: rubrics.md  scores.csv
scripts/: eval-runner.sh  hermes_evolution_eval.py  hermes_evolution_eval_v2.py  notify.sh  score-calculator.py  verify-cat1.sh
specs/: cat1-code-project.md  cat2-browser.md  cat3-monitoring.md  cat4-interaction.md  self-evolution-spec.md
(+139 files in other folders)
