[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmk"
version = "0.1.0"
description = "A CLI bookmark manager with SQLite storage"
requires-python = ">=3.12"

[project.scripts]
bmk = "bmk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bmk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
