[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bmk"
version = "0.1.0"
description = "SQLite-backed CLI bookmark manager"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Hermes Agent" }
]
dependencies = []

[project.scripts]
bmk = "bmk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
