[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmk"
version = "0.1.0"
description = "A Python CLI bookmark manager"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
bmk = "bmk.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
